--- a/ChuhoodGym_Manager/nbproject/project.properties
+++ b/ChuhoodGym_Manager/nbproject/project.properties
@@ -37,7 +37,8 @@ file.reference.sqljdbc4.jar=D:\\PhanMemLapTrinh\\JDBC\\sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc4.jar}
+    ${file.reference.sqljdbc4.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
