--- a/ChuhoodGym_Manager/nbproject/project.properties
+++ b/ChuhoodGym_Manager/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ChuhoodGym_Manager
+application.vendor=Tran Nhan Nghia
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,13 +33,18 @@ dist.jar=${dist.dir}/ChuhoodGym_Manager.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ChuhoodGym_Manager
+endorsed.classpath=
 excludes=
+file.reference.jfreechart-1.5.2.jar=D:\\PhanMemLapTrinh\\JLibrary\\jfreechart-1.5.2.jar
+file.reference.jfreechart-1.5.3.zip=D:\\PhanMemLapTrinh\\JLibrary\\jfreechart-1.5.3.zip
 file.reference.sqljdbc4.jar=D:\\PhanMemLapTrinh\\JDBC\\sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc4.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jfreechart-1.5.3.zip}:\
+    ${file.reference.jfreechart-1.5.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
