--- a/ChuhoodGym_Manager/nbproject/project.properties
+++ b/ChuhoodGym_Manager/nbproject/project.properties
@@ -35,6 +35,8 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ChuhoodGym_Manager
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.2.2.jar=D:\\PhanMemLapTrinh\\JLibrary\\jcalendar-1.2.2.jar
+file.reference.jdatepicker-1.3.4.jar=D:\\PhanMemLapTrinh\\JLibrary\\jdatepicker-1.3.4.jar
 file.reference.jfreechart-1.5.2.jar=D:\\PhanMemLapTrinh\\JLibrary\\jfreechart-1.5.2.jar
 file.reference.sqljdbc4.jar=D:\\PhanMemLapTrinh\\JDBC\\sqljdbc4.jar
 includes=**
@@ -42,7 +44,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc4.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.jfreechart-1.5.2.jar}
+    ${file.reference.jfreechart-1.5.2.jar}:\
+    ${file.reference.jdatepicker-1.3.4.jar}:\
+    ${file.reference.jcalendar-1.2.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
